--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=netflix-eureka-naming-server
-server.port=8761
+#server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+#spring actuators
+management.endpoints.web.exposure.include=*
+management.info.git.mode=full
+
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.source=@java.version@
